# guamps

./: .travis.yml  CMakeLists.txt  Makefile  Makefile.config  devenv.common  devenv.fah  devenv.olorin  run_tests  test.c  topol.tpr
ci/: install-gromacs.sh  install-guamps.sh
cmake/: FindGROMACS.cmake
go/: build.sh  gmx.go
include/: CMakeLists.txt  data.h  file.h  gmx_t.h  gmxutil.h  guampsio.h  io.h  io2.h  output.h  select.h  types.h
src/: CMakeLists.txt  Makefile  coords  coords.c  data.c  get.c  gmx_t.c  gmxutil.c  guampsio.c  io.c  output.c  select.c  set.c  test.c  test2.c  types.c
tests/: .gitignore  test_deltat.sh  test_ld_seed.sh  test_natoms.sh  test_nsteps.sh  test_nstfout.sh  test_nstlog.sh  test_nstvout.sh  test_nstxout.sh  test_nstxtcout.sh  test_positions.sh  test_ref_t.sh  test_time.sh  test_velocities.sh  utils.sh
tests/data/: state0.cpt  state1.cpt  topol.tpr  topol2.tpr
tests/data/sim/: ener.edr  state.cpt  traj.trr
tests/malloc-error/: md.sh  mdrun  test.sh  topol.tpr  v_i.gps  x_i.gps
tests/nstxtcout-failure/: run.mdp  test.sh
